# tblastx-synteny

./: .gitignore  README.md  pyproject.toml  requirements.txt  tblastx-synteny.py
.github/workflows/: main.yaml
scripts/: blast2paf.py  offset_blast.py
src/tblastx_synteny/: cli.py
src/tblastx_synteny/scripts/: blast2paf.py  split_fasta.py
src/tblastx_synteny/workflows/: .blast.smk.swo  blast.smk
test/: test.py
test/data/: PF3D7_MIT02100.fa  PbANKA_MIT_v3.fa  Pf3D7_MIT_v3.fa  Pfalciparum3D7.small.fasta  expected_Pf3D7_MIT_v3_vs_PF3D7_MIT02100.paf  query_regions.bed
workflows/: blast.smk
